
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int cnputc (char) ;
 int disableConsoleOutput ;

void
cons_putc_locked(
 char c)
{
 if (!disableConsoleOutput)
  cnputc(c);
}
